--- a/css-old/traders-club.css
+++ b/css-old/traders-club.css
@@ -4,13 +4,13 @@
 .ctm-btn a:before,
 .ctmbtn a:before {content: ' '; position: absolute; right: 0; top: 0; left: 0; bottom: 0; margin: auto; border-radius: 50%; width: 100%; height: 100%; z-index: -1; background-color: #00b6d1; -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; -webkit-transform: scale(0); transform: scale(0); }
 .ctm-btn a:hover,
-.ctmbtn a:hover { background: #01354B;  }
+.ctmbtn a:hover { background: #31334c;  }
 .ctm-btn a:hover:before,
 .ctmbtn a:hover:before {-webkit-transform: scale(2); transform: scale(2); }
 /*Button Animation*/
-.more-text { border: 1px solid #006680; padding: 30px; background: #ffffff; position:  relative; z-index:  2; margin-right: 0; }
+.more-text { border: 1px solid #006680; padding: 30px; background: #ffffff; position:  relative; z-index:  2; }
 .more-text ul { display: -webkit-box; display: -ms-flexbox; display: flex; flex-wrap: wrap; }
-.more-text ul li { width: 50%; padding: 10px 20px 10px 0; font-size: 14px; list-style: none; color: #006680; position: relative; font-weight: 700; }
+.more-text ul li { width: 50%; padding: 10px 20px 10px 0; font-size: 18px; list-style: none; color: #006680; position: relative; font-weight: 700; }
 .more-text ul li:before {content: ' '; height: 1px; width: calc(100% - 20px); position: absolute; top: 0; left: 0; background: #18677f; }
 .more-text ul li:nth-child(1):before,
 .more-text ul li:nth-child(2):before { display: none; }
@@ -18,7 +18,7 @@
 .more-text .ctm-btn a { background-color: #2c304b; color: #fff; padding: 10px 15px; text-transform: uppercase; text-decoration:none; font-size: 18px; }
 .more-text .ctm-btn a:hover { background-color: #18677f; }
 .about-dvl-detail .white-container { padding: 50px 80px;  box-shadow: rgba(0, 0, 0, 0.4) 10px 0 20px 0; }
-.about-dvl-detail .line { margin: 0 auto 20px auto; }
+.about-dvl-detail .line { margin: 0 0 20px; }
 .information-wrapper { align-items: center; margin-top: 10px; }
 .information-wrapper .more-text { width: 60%;}
 .information-wrapper .image-dvl-box { width: 40%; padding-left: 100px; }
@@ -48,9 +48,6 @@
 .traders-clan-section .flex-wrap { margin: 0 -40px; }
 .classtext-dvl-wrap { padding: 0 40px; border-right: 1px solid rgba(0,0,0,0.2); }
 .classtext-dvl-wrap:nth-child(4n+4){ border: none; }
-.fixh4 h4 {
-	min-height: auto;
-}
 .classtext-dvl-wrap h4 { font-size: 30px; line-height: 1.2; }
 @media(max-width: 1200px) {
 	.classtext-dvl-wrap h4 { font-size: 26px; }
@@ -74,18 +71,14 @@
 
 .week-dvl-section { padding-top:  60px; padding-bottom: 60px; position: relative; overflow: hidden; }
 .week-dvl-section .container { position: relative;  z-index: 2; }
-.traderSec:before {content: ''; position: absolute !important; bottom: 0; left: 0; right: 0; height: calc(100% - 400px); width: 100%; background: #2c304b; }
-.sec-title { text-align:  center; max-width: 900px; width: 100%; margin: 0 auto; }
-.sec-title p { font-size: 16px; color: #000000; }
+.week-dvl-section:before {content: ''; position: absolute; bottom: 0; left: 0; right: 0; height: calc(100% - 400px); width: 100%; background: #2c304b; }
+.sec-title { text-align:  center; max-width: 1000px; width: 100%; margin: 0 auto; }
+.sec-title p { font-size: 20px; }
 .week-dvl-section .flex-wrap { margin: 0 -30px; }
 .week-wrap { width: calc(33.33% - 60px); margin: 20px 30px; background: #ffffff; border-radius: 20px;overflow: hidden; box-shadow: rgba(0, 0, 0, 0.4) 10px 0 20px 0; }
 .week-wrap h5 { background: #00afc9; background: linear-gradient(90deg, #00afc9 20%, #004661 100%); color:  #fff; text-align: center; padding: 15px 10px; }
 .week-text { padding: 15px 20px; }
 .week-text p:last-child{ padding-bottom: 0; }
-
-
-
-
 
 
 @media(max-width: 991px) {
@@ -97,29 +90,9 @@
 @media(max-width: 767px) {
 	.week-wrap {width: calc(100% - 40px); margin: 20px;}	
 	.sec-title p { font-size: 17px; }
-	.week-dvl-section:before { height: calc(100% - 400px); }
+	.week-dvl-section:before { height: calc(100% -400px); }
 	.week-dvl-section { padding-bottom: 20px; padding-top: 40px; }
 }
-
-/*New Design*/
-.week-wrap { width: calc(50% - 60px); display: flex; min-height: 150px; border-radius: 0; align-items: center; }
-.week-wrap h5 { display: flex; flex-wrap: wrap; align-items: center; height: 100%; width: 150px; text-align: center; justify-content: center; font-size: 20px; }
-.week-text { width: calc(100% - 150px); }
-.week-wrap h5 span { font-size: 30px; font-weight: 700; display: block; width: 100%; }
-@media(max-width: 991px){
-	.week-wrap {width: calc(50% - 40px); margin: 20px;}
-}
-@media(max-width: 767px) {
-
-	.week-wrap {width: calc(100% - 40px); margin: 10px 20px; flex-wrap: wrap; min-height: inherit; }
-	.week-wrap h5 { width: 100%; height: auto; font-size: 16px; padding: 10px; }	
-	.week-text { width: 100%; }
-	.week-wrap h5 span{ display: inline-block; width: auto; padding-left: 4px; font-size: 16px; order: 2; }
-	.week-wrap h5 div { display: flex;  }
-	.week-text p { text-align: center; font-size: 13px; }
-
-}
-/*New Design*/
 
 
 
@@ -134,21 +107,20 @@
 
 
 .fund-round-wrapper { padding-top: 50px; }
-.fund-round-wrapper:before {content: ''; position: absolute; top: 0; left: 0; right: 0; height: 400px; width: 100%; background: #2c304b; }
+.fund-round-wrapper:before {
+	content: ''; position: absolute; top: 0; left: 0; right: 0; height: 400px; width: 100%; background: #2c304b;
+}
 .fund-round-wrapper .whitebg { box-shadow: rgba(0, 0, 0, 0.4) 10px 0 20px 0; padding: 50px 120px 80px; position: relative; z-index: 2; }
-.fund-round-wrapper p { font-size: 18px; padding-bottom: 10px; }
-.fund-round-wrapper h6 {  background: #f4f4f4; width: 100%; padding: 8px 20px; font-size: 24px; font-weight: 700; display: inline-block; letter-spacing: 0.5px; margin: 30px 0 10px; position: relative; margin-bottom: 20px; z-index: 10; -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
-.fund-round-wrapper h6:before{content: ''; position: absolute; top: 0; left: 0; z-index: 1; height: 100%; width: 0; background: #009ab1; -webkit-transition: all 0s ease-in-out; transition: all 0s ease-in-out; }
-.fund-round-wrapper h6:hover:before{ width: 4px; }
-.fund-round-wrapper h6:after{content: ''; position: absolute; top: 0; left: 0; z-index: -1; height: 100%; width: 4px; background: #00afc9; -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
-.fund-round-wrapper h6:hover:after{width: 100% }
-.fund-round-wrapper h6:hover{color: #fff; }
+.fund-round-wrapper p { font-size: 20px; padding-bottom: 10px; }
+.fund-round-wrapper h6 {  background: #00afc9; background: linear-gradient(90deg, #00afc9 20%, #004661 100%); color:  #fff; padding: 8px 20px; font-size: 24px; font-weight: 700; display: inline-block; letter-spacing: 0.5px; margin: 30px 0 10px; }
 .fund-round-wrapper h4 { font-size: 22px; font-weight: 400; padding-bottom: 5px; }
 .fund-round-wrapper h6 strong { font-weight: 700; }
 .fund-round-wrapper h5 { font-size: 22px; }
+
 .fund-round-wrapper ol,
 .fund-round-wrapper ul { padding-bottom: 30px; }
 .fund-round-wrapper li { font-size: 20px; }
+
 @media(max-width: 991px) {
 	.fund-round-wrapper { padding-top: 20px; }
 	.fund-round-wrapper .whitebg { padding: 50px; }
@@ -157,12 +129,20 @@
 	.fund-round-wrapper h6 { font-size: 22px; }
 	.fund-round-wrapper h5,
 	.fund-round-wrapper h4 { font-size: 20px; }
+	
 }
 @media(max-width: 767px) {
 	.fund-round-wrapper .whitebg { padding: 30px 20px; }
 	.fund-round-wrapper p,
 	.fund-round-wrapper li { font-size: 16px; }
+	
 }
+
+
+
+
+
+
 
 .Enroll-Yourself { padding-top: 60px; padding-bottom: 60px; }
 .Enroll-Yourself h2 { padding-bottom: 30px; text-align: center; }
