--- a/css-old/alumni.css
+++ b/css-old/alumni.css
@@ -54,17 +54,6 @@
 	.out-information ol { padding: 20px 0 20px 15px; }
 }
 
-/*New Design*/
-.out-information ol { display: flex; flex-wrap: wrap; margin: 0 -15px; counter-reset: Number; }
-.out-information ol li{font-size: 16px; line-height: 1.4; width: 50%; position: relative; list-style: none; position: relative; padding: 0 15px 25px 60px; }
-.out-information ol li:last-child { padding-bottom: 0; }
-.out-information ol li:before{counter-increment: Number; content: counter(Number); height: 40px; width: 40px; line-height: 40px; text-align: center; border-radius: 50%; font-size: 20px; font-weight: 700; color: #2c304b; background: #fff; display: block; position: absolute; top: 0; left: 0; }
-@media(max-width: 767px){
-	.out-information ol li { padding-right: 0; width: 100%; padding-left: 35px; font-size: 14px; }
-	.out-information ol li:before { height: 24px; width: 24px; line-height: 24px; font-size: 16px; }
-}
-/*New Design*/
-
 
 
 .our-alumni-sec { padding-bottom: 60px; padding-top: 80px; }
@@ -147,7 +136,7 @@
 /*Button Animation*/
 .ctmbtn a {  position: relative; z-index: 10; overflow:  hidden; }
 .ctmbtn a:before {content: ' '; position: absolute; right: 0; top: 0; left: 0; bottom: 0; margin: auto; border-radius: 50%; width: 100%; height: 100%; z-index: -1; background-color: #00b6d1; -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; -webkit-transform: scale(0); transform: scale(0); }
-.ctmbtn a:hover { background: #01354B;  }
+.ctmbtn a:hover { background: #31334c;  }
 .ctmbtn a:hover:before {-webkit-transform: scale(2); transform: scale(2); }
 /*Button Animation*/
 
