--- a/css-old/blog.css
+++ b/css-old/blog.css
@@ -4,7 +4,7 @@
 .ctm-btn a:before,
 .ctmbtn a:before {content: ' '; position: absolute; right: 0; top: 0; left: 0; bottom: 0; margin: auto; border-radius: 50%; width: 100%; height: 100%; z-index: -1; background-color: #00b6d1; -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; -webkit-transform: scale(0); transform: scale(0); }
 .ctm-btn a:hover,
-.ctmbtn a:hover { background: #01354B;  }
+.ctmbtn a:hover { background: #31334c;  }
 .ctm-btn a:hover:before,
 .ctmbtn a:hover:before {-webkit-transform: scale(2); transform: scale(2); }
 /*Button Animation*/
@@ -27,8 +27,8 @@
 .artical-post h2 { font-size: 26px; color: #fff; text-transform: uppercase; text-align: center; padding-bottom: 10px; }
 .artical-post p,
 .artical-post h4 a{ color: #fff; }
-.artical-post .ctmbtn a { background: #ffffff; color: #01354B; font-weight: 500; }
-.artical-post .ctmbtn a:hover { background: #01354B; color: #fff; }
+.artical-post .ctmbtn a { background: #ffffff; color: #31334c; font-weight: 500; }
+.artical-post .ctmbtn a:hover { background: #31334c; color: #fff; }
 .artical-post .container { max-width: 1100px; }
 
 .recent-post { padding-top: 60px; padding-bottom: 60px; }
